--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,6 +5,23 @@
   --cor-cinza: #f4f4f4;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+#app {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main-content {
+  flex-grow: 1; /* Isso garante que o conteúdo ocupe o restante da altura disponível */
+}
+
 body {
   font-family: 'Rajdhani', sans-serif;
   margin: 0;
